[tool.poetry]
name = "iust_ai_toolkit"
version = "0.1.3"
description = "A Toolkit for AI course submissions at IUST"
authors = ["MSNP <mohamadnematpoor@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MSNP1381/iust_ai_toolkit"
repository = "https://github.com/MSNP1381/iust_ai_toolkit"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "*"
pandas = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.scripts]
bump_version = "scripts.version:bump_version"